[tool.poetry]
name = "cycle-calc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

include = [{ path = "cycle_calc/data", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.3"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
debugpy = "^1.8.6"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
